--- a/ExcelUtilities/ExcelUtilities.csproj
+++ b/ExcelUtilities/ExcelUtilities.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ExcelMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WordMethods.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
