--- a/ExcelUtilities/ExcelUtilities.csproj
+++ b/ExcelUtilities/ExcelUtilities.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Aspose.Cells, Version=22.2.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
-      <HintPath>..\packages\Aspose.Cells.22.2.0\lib\net40\Aspose.Cells.dll</HintPath>
+    <Reference Include="Aspose.Cells, Version=22.3.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
+      <HintPath>..\packages\Aspose.Cells.22.3.0\lib\net40\Aspose.Cells.dll</HintPath>
     </Reference>
     <Reference Include="GrEmit, Version=3.4.10.0, Culture=neutral, PublicKeyToken=93c84d6089a381c7, processorArchitecture=MSIL">
       <HintPath>..\packages\GrEmit.3.4.10\lib\net45\GrEmit.dll</HintPath>
@@ -58,6 +58,7 @@
     <Compile Include="ExportFormat.cs" />
     <Compile Include="ImportHelper.cs" />
     <Compile Include="ObjectCompressionHelper.cs" />
+    <Compile Include="ProcessHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StructureExportFormat.cs" />
     <Compile Include="WordMethods.cs" />
